--- a/Tips for Python_exercises_solution(2).ipynb
+++ b/Tips for Python_exercises_solution(2).ipynb
@@ -44,11 +44,11 @@
     "flattened_matrix = [num for row in matrix for num in row]\n",
     "flattened_matrix1 = []\n",
     "flattened_matrix = []\n",
-    "first_elements1=[]\n",
+    "first_elements1 = []\n",
     "for row in matrix:\n",
-    "  for num in row:\n",
-    "    flattened_matrix1.append(num)\n",
-    "  first_elements1.append(row[0])\n",
+    "    for num in row:\n",
+    "        flattened_matrix1.append(num)\n",
+    "    first_elements1.append(row[0])\n",
     "#flattened_matrix\n",
     "first_elements = [row[0] for row in matrix]\n",
     "print(flattened_matrix1)\n",
@@ -124,11 +124,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "e7708aba-98ac-462f-ad9d-66472e54b252",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-20T22:55:18.457118Z",
+     "start_time": "2025-01-20T22:55:18.451915Z"
+    }
+   },
+   "source": [
+    "# print the grades if they are prime value\n",
+    "# prime value is a number that can only be divided by itself and 1\n",
+    "def is_prime(n):\n",
+    "    if n <= 1:\n",
+    "        return False\n",
+    "    for i in range(2, n):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "grades = [88, 92, 78, 65, 50, 94]\n",
+    "\n",
+    "for grade in grades:\n",
+    "    if is_prime(grade):\n",
+    "        print(grade)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
    "cell_type": "code",
